--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -14,6 +14,12 @@ summary: How to Configure NVMe/FC Host for RHEL 8.2 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
+include::_include/nvme/nvme-introduction.adoc[]
+
+.About this task 
+You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.2. You should also review the known limitations before starting the configuration process.
+
+* Support available:
 
 Beginning with ONTAP 9.6, NVMe/FC is supported for Red Hat Enterprise Linux (RHEL) 8.2. The RHEL 8.2 host runs both NVMe and SCSI traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. 
 
