Add Rocky Linux 9.6 and 10

--- a/_include/nvme/nvme-enable-san-boot.adoc
+++ b/_include/nvme/nvme-enable-san-boot.adoc
@@ -5,9 +5,8 @@ Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matri
  
 .Steps
  
-. Create a SAN boot LUN and map it to the host.
-+
-See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
+. link:https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Create a SAN boot LUN and map it to the host^].
+
 . Verify that multiple paths are available.
 +
 [NOTE]
