--- a/nvme-rockylinux-95.adoc
+++ b/nvme-rockylinux-95.adoc
@@ -4,7 +4,6 @@ permalink: nvme-rockylinux-95.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 ---
-
 = Configure Rocky Linux 9.5 with NVMe-oF for ONTAP storage
 :hardbreaks:
 :toclevels: 1
@@ -27,33 +26,38 @@ You can use the following support and features with the NVMe-oF host configurati
 * Features available:
 ** Beginning with ONTAP 9.12.1, you can use secure in-band authentication for NVMe-oF with Rocky Linux 9.5.
 ** Rocky Linux 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
-** You can use SAN booting with the NVMe/FC protocol.
+
 * Known limitations: 
 ** There are no known limitations.
 
-== Step 1: Validate software versions
+
+== Step 1: Optionally, enable SAN booting
+include::_include/nvme/nvme-enable-san-boot.adoc[]
+
+== Step 2: Validate software versions
 include::_include/nvme/nvme-validate-software-versions.adoc[] 
 
-== Step 2: Verify your NVMe configuration
+== Step 3: Configure NVMe/FC
 include::_include/nvme/nvme-configure.adoc[]
 
 [NOTE]
 Beginning with Rocky Linux 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
-== Step 3: Optionally, enable 1MB I/O 
+== Step 4: Optionally, enable 1MB I/O 
 include::_include/nvme/nvme-enable-1mb-io.adoc[]
 
-== Step 4: Validate NVMe-oF
-include::_include/nvme/nvme-validate-nvme-of.adoc[] 
+== Step 5: Configure NVMe/TCP
 
-== Step 5: Optionally, enable SAN booting
-include::_include/nvme/nvme-enable-san-boot.adoc[]
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
-== Step 6: Set up secure in-band authentication
+== Step 6: Validate NVMe-oF
+include::_include/nvme/nvme-validate-nvme-of.adoc[]
+
+== Step 7: Set up secure in-band authentication
 include::_include/nvme/nvme-secure-in-band-authentication.adoc[]
 
-== Step 7: Review the known issues
+== Step 8: Review the known issues
 
-No known issues exist for the NVMe-oF host configuration on Rocky Linux 9.5 with ONTAP release.
+There are no known issues.
 
 //ONTAPDOC-2561 25-Nov-2024
