--- a/nvme_rhel_96.adoc
+++ b/nvme_rhel_96.adoc
@@ -34,212 +34,11 @@ For additional details on supported configurations, see the link:https://mysuppo
 include::_include/nvme/nvme-enable-san-boot.adoc[]
 
 == Step 2: Validate software versions
-
-Use the following procedure to validate the minimum supported RHEL 9.6 software versions.
-
-.Steps
-
-. Install RHEL 9.6 on the server. After the installation is complete, verify that you are running the specified RHEL 9.6 kernel: 
-+
-[source,cli]
-----
-uname -r
-----
-+
-The following example shows a RHEL kernel version:
-+
-----
-5.14.0-570.12.1.el9_6.x86_64
-----
-
-. Install the `nvme-cli` package:
-+
-[source,cli]
-----
-rpm -qa|grep nvme-cli
-----
-+
-The following example shows an nvme-cli package version:
-+
-----
-nvme-cli-2.11-5.el9.x86_64
-----
-
-. Install the `libnvme` package:
-+
-[source,cli]
-----
-rpm -qa|grep libnvme
-----
-+
-The following example shows an `libnvme` package version:
-+
-----
-libnvme-1.11.1-1.el9.x86_64
-----
-
-. On the RHEL 9.6 host, check the hostnqn string at `/etc/nvme/hostnqn`:
-+
-[source,cli]
-----
-cat /etc/nvme/hostnqn
-----
-+
-The following example shows an `hostnqn` version:
-+
-----
-nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-----
-
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
-+
-[source,cli]
-----
-::> vserver nvme subsystem host show -vserver vs_coexistence_LPE36002
-----
-+
-.Show example
-[%collapsible]
-====
-----
-Vserver Subsystem Priority  Host NQN
-------- --------- --------  ------------------------------------------------
-vs_coexistence_LPE36002
-        nvme
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_1
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_2
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_3
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-4 entries were displayed.
-----
-====
-+
-[NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
-
+include::_include/nvme/nvme-validate-software-versions.adoc[] 
 
 == Step 3: Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
-
-[role="tabbed-block"]
-====
-.Broadcom/Emulex
---
-.Steps
-
-. Verify that you are using the supported adapter model: 
-
-.. Display the model names:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/modelname
-----
-+
-You should see the following output:
-+
-----
-LPe36002-M64 
-LPe36002-M64
-----
-
-.. Display the model descriptions:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-You should see an output similar to the following example:
-+
-----
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
-----
-
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-
-.. Display the firmware version:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/fwrev
----- 
-+
-The following example shows firmware versions:
-+
-----
-14.4.393.25, sli-4:6:d
-14.4.393.25, sli-4:6:d
-----
-
-.. Display the inbox driver version:
-+
-[source,cli]
-----
-cat /sys/module/lpfc/version
----- 
-+
-The following example shows a driver version:
-+
-----
-0: 14.4.0.6
-----
-
-+
-For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
-+
-[source,cli]
-----
-cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-----
-
-. Verify that you can view your initiator ports:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/port_name
-----
-+
-The following example shows port identities:
-+
----- 
-0x100000109bf044b1
-0x100000109bf044b2
-----
-
-. Verify that your initiator ports are online:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/port_state
-----
-+
-You should see the following output:
-+
-----
-Online
-Online
-----
-
-. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/nvme_info
-----
-+
-.Show example
-[%collapsible]
-=====
-[subs=+quotes]
-----
+include::_include/nvme/nvme-configure-96-and-later.adoc[]
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250 
 NVME LPORT lpfc0 WWPN x100000109b954518 WWNN x200000109b954518 DID x000000 *ONLINE*
@@ -299,38 +98,7 @@ FCP CMPL: xb 000035cc Err 000fcfc0
 =====
 
 --
-
-.Marvell/QLogic
---
-
-Configure NVMe/FC for a Marvell/QLogic adapter.
-
-.Steps
-
-. Verify that you are running the supported adapter driver and firmware versions:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/symbolic_name
-----
-+
-The follow example shows driver and firmware versions:
-+
-----
-QLE2872 FW:v9.15.03 DVR:v10.02.09.300-k-debug
-QLE2872 FW:v9.15.03 DVR:v10.02.09.300-k-debug
-----
-
-. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
-[source,cli]
-----
-cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-----
-+
-The expected ouptut is 1.
---
-====
+include::_include/nvme/nvme-configure-marvell-logic-96-and-later.adoc[]
 
 == Step 4: Optionally, enable 1MB I/O 
 
