Update include file for Step 2

--- a/nvme-rockylinux-93.adoc
+++ b/nvme-rockylinux-93.adoc
@@ -33,7 +33,24 @@ You can use the following support and features with the NVMe-oF host configurati
 include::_include/nvme/nvme-enable-san-boot.adoc[]
 
 == Step 2: Validate software versions
-include::_include/nvme/nvme-validate-software-versions.adoc[] 
+Use the following procedure to validate the minimum supported Rocky Linux 9.3 software versions.
+
+.Steps
+
+. Install Rocky Linux 9.3 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 9.3 kernel: 
++
+[source,cli]
+----
+uname -r
+----
++
+The following example shows a Rocky Linux kernel version:
++
+----
+5.14.0-570.12.1.el9_6.x86_64
+----
+[start=2]
+include::_include/nvme/linux-validate-software-versions.adoc[] 
 
 == Step 3: Configure NVMe/FC
 include::_include/nvme/nvme-configure.adoc[]
