--- a/nvme-rockylinux-96.adoc
+++ b/nvme-rockylinux-96.adoc
@@ -419,7 +419,7 @@ include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
 == Step 8: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 9.6 host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 9.6 host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -438,7 +438,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the RHEL 9.6 host.
+. Generate the dhchap key for the Rocky Linux 9.6 host.
 +
 The following output describes the `gen-dhchap-key` command paramters:
 +
