Edits post IE review

--- a/hu-hpux-release-notes.adoc
+++ b/hu-hpux-release-notes.adoc
@@ -19,7 +19,7 @@ The release notes describe new features and enhancements, fixed issues, known is
 
 There are no new features and enhancements.
 
-The HP-UX Host Utilities 6.0 supports the following HP-UX OS versions:
+HP-UX Host Utilities 6.0 supports the following HP-UX OS versions:
 
 * HP-UX 11iv2
 * HP-UX 11iv3
