--- a/nvme_rhel_96.adoc
+++ b/nvme_rhel_96.adoc
@@ -60,6 +60,9 @@ You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
 [role="tabbed-block"]
 =====
 .Broadcom/Emulex
+
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 --
 .Steps
 
